# Nodes

./: .gitignore  .spi.yml  .swiftlint-base.yml  .swiftlint-disables.yml  .swiftlint.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Configuration.md  LICENSE  Makefile  Nodes.podspec  Package.resolved  Package.swift  Package@swift-5.10.swift  README.md  RxSwift.md  WORKSPACE.bazel  docs.html  genesis.yml
.github/: release.yml
.github/workflows/: artifactory.yml  bazel.yml  docc.yml  genesis.yml  github-actions-demo.yml  lint.yml  pages.yml  swift.yml  xcode.yml
.preflight/: preflight.yml
.preflight/plugins/parsers/: swiftlint
Customization/: Configuration.md  Perception.md  RxSwift.md
Plugins/SwiftLintPlugin/: SwiftLintPlugin.swift
Sources/: .swiftlint.yml
Sources/Executables/NodesCodeGenerator/: NodesCodeGeneratorCommand.swift
Sources/NodesCodeGenerator/: NodesCodeGeneratorCommand.swift
Sources/NodesGenerator/: Bundle.swift  Config.swift  Decoder.swift  FileSystem.swift  Preset.swift  PresetGenerator.swift  Resources.swift  StencilContext.swift  StencilRenderer.swift  StencilTemplate.swift  UIFramework.swift  Variable.swift  XcodeTemplate.swift  XcodeTemplateConstants.swift  XcodeTemplateGenerator.swift  XcodeTemplatePermutation.swift  XcodeTemplatePropertyList.swift  XcodeTemplates.swift  YAMLDecoder.swift
Sources/NodesTesting/: DependencyProviderRegistrationBuilder.swift  DependencyProviderRegistry.swift  PathComponent.swift  StateStoreMock.swift  ViewStateStoreMock.swift  XCTestCase.swift
Sources/NodesXcodeTemplatesGenerator/: Bundle.swift  Config.swift  Context.swift  Decoder.swift  FileSystem.swift  StencilContext.swift  StencilRenderer.swift  StencilTemplate.swift  UIFramework.swift  Variable.swift  XcodeTemplate.swift  XcodeTemplateGenerator.swift  XcodeTemplatePropertyList.swift  XcodeTemplates.swift  YAMLDecoder.swift
Sources/NodesXcodeTemplatesGeneratorExecutable/: ConfigFactory.swift  NodesXcodeTemplatesGeneratorCommand.swift
Sources/XcodeTemplateGeneratorLibrary/: Bundle.swift  Config.swift  Context.swift  Decoder.swift  FileSystem.swift  StencilRenderer.swift  StencilTemplate.swift  UIFramework.swift  Variable.swift  XcodeTemplate.swift  XcodeTemplateGenerator.swift  XcodeTemplatePropertyList.swift  XcodeTemplates.swift  YAMLDecoder.swift
Sources/XcodeTemplateGeneratorTool/: ConfigFactory.swift  XcodeTemplateGeneratorCommand.swift  main.swift
Tests/: .swiftlint.yml
Tests/NodesGeneratorTests/: ConfigTests.swift  FileSystemTests.swift  PresetGeneratorTests.swift  StencilContextsTests.swift  StencilRendererTests.swift  StencilTemplateTests.swift  UIFramework-FrameworkTests.swift  UIFramework-KindTests.swift  UIFrameworkDefaultsTests.swift  UIFrameworkFrameworkTests.swift  UIFrameworkKindTests.swift  UIFrameworkTests.swift  XcodeTemplateConstantsTests.swift  XcodeTemplateGeneratorTests.swift  XcodeTemplatePermutationTests.swift  XcodeTemplatePropertyListTests.swift  XcodeTemplateTests.swift  XcodeTemplatesTests.swift
Tests/NodesTestingTests/: XCTestCaseTests.swift
Tests/NodesTests/: NimbleMatchers.swift  NodesMocks.swift  TestCaseHelpers.swift
Tests/NodesXcodeTemplatesGeneratorTests/: ConfigTests.swift  ContextsTests.swift  FileSystemMock.swift  FileSystemTests.swift  StencilContextsTests.swift  StencilRendererTests.swift  StencilTemplateTests.swift  TemplatesTests.swift  TestFactories.swift  UIFrameworkDefaultsTests.swift  UIFrameworkFrameworkTests.swift  UIFrameworkKindTests.swift  UIFrameworkTests.swift  XcodeTemplatePropertyListTests.swift  XcodeTemplateTests.swift  XcodeTemplatesTests.swift
Tests/XcodeTemplateGeneratorLibraryTests/: ConfigTests.swift  ContextsTests.swift  FileSystemMock.swift  FileSystemTests.swift  MockFileSystem.swift  StencilRendererTests.swift  StencilTemplateTests.swift  TemplatesTests.swift  TestFactories.swift  UIFrameworkDefaultsTests.swift  UIFrameworkFrameworkTests.swift  UIFrameworkKindTests.swift  UIFrameworkTests.swift  XcodeTemplatePropertyListTests.swift  XcodeTemplatesTests.swift
bazel/: repositories.bzl
(+1609 files in other folders)
