load("@build_bazel_rules_apple//apple:ios.bzl", "ios_build_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

ios_build_test(
    name = "Nodes-iOS",
    minimum_os_version = "13.0",
    targets = [":Nodes"],
)

swift_library(
    name = "Nodes",
    srcs = glob(["Sources/Nodes/**/*.swift"]),
    copts = ["-strict-concurrency=complete"],
    visibility = ["//visibility:public"],
    tags = ["manual"],
)
